gccida/c1/gen_lexical_block_die
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_lexical_block_die/src/dwarf2out.c:11070:40: error: use of undeclared identifier 'off_624A4C'
sprintf( v8, "*.%s%u", ( const char *)&off_624A4C, stmt->identifier.id.len >> 2); 
                                       ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_lexical_block_die/src/obj/dwarf2out.o] Error 1
